# SofaOpenCVPlugin

./: README.md
VisionPlugin/: CMakeLists.txt  CalipsoGUI.cpp  CalipsoGUI.h  CalipsoGUI.inl  ControlPoint.cpp  ControlPoint.h  FarnebackOpticalFlowTracker.cpp  FarnebackOpticalFlowTracker.h  FarnebackOpticalFlowTracker.inl  InterFrameMatching.cpp  InterFrameMatching.h  InterFrameMatching.inl  LKOpticalFlowTracker.cpp  LKOpticalFlowTracker.h  LKOpticalFlowTracker.inl  LKOpticalFlowTrackerSimple.cpp  LKOpticalFlowTrackerSimple.h  LKOpticalFlowTrackerSimple.inl  ProjectPositionsOnImage.cpp  ProjectPositionsOnImage.h  ProjectPositionsOnImage.inl  ProjectStressOnImage.cpp  ProjectStressOnImage.h  ProjectStressOnImage.inl  VideoReader.cpp  VideoReader.h  VideoReader.inl  VideoReader2.cpp  VideoReader2.h  VideoReader2.inl  initOpticalFlow.cpp  initOpticalFlow.h
VisionPlugin/.svn/: all-wcprops  entries
VisionPlugin/.svn/text-base/: Makefile.svn-base  PointsRegistrationEngine.cpp.svn-base  PointsRegistrationEngine.h.svn-base  PointsRegistrationEngine.inl.svn-base  ProjectivePattern.cpp.svn-base  ProjectivePattern.h.svn-base  SofaAR-dependencies.prf.svn-base  SofaAR.pro.svn-base  SofaAR.txt.svn-base  SofaARBase.cpp.svn-base  SofaARBase.h.svn-base  SofaARBase.inl.svn-base  SofaARCapsule.cpp.svn-base  SofaARCapsule.h.svn-base  VoidMappingHNI.cpp.svn-base  VoidMappingHNI.h.svn-base  VoidMappingHNI.inl.svn-base  initSofaAR.cpp.svn-base  initSofaAR.h.svn-base
VisionPlugin/example/: FarnebackOpticalFlow.scn  InterFrameMatching.scn  LKOpticalFlow.scn  LKOpticalFlowSimple.scn
(+43 files in other folders)
